<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/standard_field_margin"
    />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_margin="@dimen/standard_field_margin"
        android:layout_marginTop="188dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailET" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        style="@style/StandardButton"
        android:text="@string/startup_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        android:onClick="onLogin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>